--- a/register.html
+++ b/register.html
@@ -3,7 +3,7 @@
     <head>
         <title>sign up</title>
         <meta charset="utf-8">
-        <link rel="stylesheet"  type="text/css" href="css/sign_up_style.css">
+        <link rel="stylesheet"  type="text/css" href="css/style.css">
         <link href="https://fonts.googleapis.com/css?family=Dosis|Roboto" rel="stylesheet">
     </head>
     <body>
