--- a/login.html
+++ b/login.html
@@ -12,17 +12,14 @@
             <a href="">
                 <img id="logo" src="images/logo.jpg" >
             </a>
-            <span id="slogan">ask anything</span>
+            <span id="slogan">Log in</span>
         </div>
         
         <hr>
         <div id="menubarcontainer">
             <div id="menubar">                
-                <a href="">About</a>
-                <a href="">my profile</a>
-                <a href="">Home</a> 
-                <input type="text">
-                <button type="submit" id="search" >search</button>
+                <a href="about.html">About</a>
+                <a href="register.html">Home</a>
             </div>
         </div>
         
