--- a/login.html
+++ b/login.html
@@ -19,7 +19,7 @@
         <div id="menubarcontainer">
             <div id="menubar">                
                 <a href="about.html">About</a>
-                <a href="register.html">Home</a>
+                <a href="index.html">Home</a>
             </div>
         </div>
         
@@ -32,7 +32,7 @@
                     <input type="text" placeholder="User name"/>
                     <input type="password" placeholder="Password"/>
                     <button>login</button>
-                    <p class="msg">Not registered?<a href="">Sign Up</a> </p>
+                    <p class="msg">Not registered?<a href="register.html">Sign Up</a> </p>
                 </form>
             </div>
         </div>
