--- a/login.html
+++ b/login.html
@@ -12,17 +12,14 @@
             <a href="">
                 <img id="logo" src="images/logo.jpg" >
             </a>
-            <span id="slogan">ask anything</span>
+            <span id="slogan">Log in</span>
         </div>
         
         <hr>
         <div id="menubarcontainer">
             <div id="menubar">                
-                <a href="">About</a>
-                <a href="">my profile</a>
-                <a href="">Home</a> 
-                <input type="text">
-                <button type="submit" id="search" >search</button>
+                <a href="about.html">About</a>
+                <a href="index.html">Home</a>
             </div>
         </div>
         
@@ -35,7 +32,7 @@
                     <input type="text" placeholder="User name"/>
                     <input type="password" placeholder="Password"/>
                     <button>login</button>
-                    <p class="msg">Not registered?<a href="">Sign Up</a> </p>
+                    <p class="msg">Not registered?<a href="register.html">Sign Up</a> </p>
                 </form>
             </div>
         </div>
